--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@babel/runtime": "^7.6.2",
     "@rails/webpacker": "3.5",
     "babel-loader": "^8.0.6",
+    "css-loader": "^5.0.2",
     "lodash": "^4.17.20",
     "prop-types": "~15.6.0",
     "react": "~16.8.0",
     "react-dom": "~16.8.0",
     "react-router-dom": "5.0.0",
-    "react-script": "^1.0.13",
-    "redbox-react": "1.6.0"
+    "redbox-react": "1.6.0",
+    "style-loader": "^2.0.0"
   },
   "devDependencies": {
     "babel-jest": "^24.9.0",
