updated some css

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "~16.8.0",
     "react-dom": "~16.8.0",
     "react-router-dom": "5.0.0",
+    "react-transition-group": "^4.4.1",
     "redbox-react": "1.6.0",
     "style-loader": "^2.0.0"
   },
